# python-calculator

./: setup.cfg
pythoncalculator/: subtract.py
tests/: test_divide.py
